test_compiler_flags ${CC} CFLAGS REQUIRED "-fvisibility=hidden"

test_compiler_flags ${CC} CFLAGS OPTIONAL "-Wall" "-Wextra" "-Werror" "-O2"

test_compiler_flags ${CC} CFLAGS_COV OPTIONAL "--coverage" "--dumpbase ''"

test_compiler_flags ${CC} CFLAGS_SAN OPTIONAL "-fsanitize=address"

populate "${SRCDIR}"
populate "${SRCDIR}/tests"
